Address border overflow issues on the UI.

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -60,6 +60,8 @@
     align-items: center;
     justify-content: center;
     background: transparent;
+
+    overflow-x: hidden; /* Forbid side-scrolling no matter what. */
 }
 
 /* Layout Container */
