--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,8 @@ html
     padding: 0;
     background-color: var(--deep-blue);
     transition: background-color 0.5s ease, color 0.5s ease;
+
+    overflow-x: hidden;
 }
 
 body
@@ -41,6 +43,8 @@ body
     font-size: 16px;
     background-color: transparent;
     color: inherit;
+
+    overflow-x: hidden;
 }
 
 /* Default link style */
